--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test:integration": "ts-node scripts/run-integration-tests.ts",
     "test": "npm run test:unit && npm run test:integration",
     "clean": "rm -rf ./build",
-    "build": "npm run clean && tsc -b",
-    "prepublish": "npm run clean && tsc --project tsconfig.build.json"
+    "build": "npm run clean && tsc --project tsconfig.build.json"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
